# sdavids-docker-healthcheck

./: .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .hadolint.yaml  CODE_OF_CONDUCT.md  CODING_STYLE.adoc  README.adoc  REUSE.toml  SECURITY.md  TODO
.githooks/: pre-commit
.github/actions/setup-node-and-install-dependencies/: action.yaml
.github/workflows/: ci.yaml
go/: .editorconfig  .gitattributes  .gitignore  .golangci.yaml
go/http/: Dockerfile  README.adoc  go.mod
go/http/cmd/: healthcheck.go
go/http/scripts/: build.sh  build_release.sh  clean.sh  docker_build.sh  docker_health.sh  docker_logs.sh  docker_remove.sh  docker_sh.sh  docker_start.sh  docker_stop.sh  format.sh  lint.sh  lint_fix.sh  test.sh
go/https/: .dockerignore  Dockerfile  README.adoc  go.mod  go.sum
go/https/cmd/: healthcheck.go
go/https/scripts/: build_release.sh  create_self_signed_cert.sh  docker_build.sh  docker_cleanup.sh  docker_health.sh  docker_logs.sh  docker_remove.sh  docker_sh.sh  docker_start.sh  lint.sh  (+3 more)
java/http/: .dockerignore  .gitignore  .sdkmanrc  Dockerfile  README.adoc
js/: .editorconfig
js/nodejs/: .dockerignore  .gitignore  .npmrc  .prettierignore  Dockerfile  README.adoc  eslint.config.mjs  package-lock.json  package.json
rust/: .editorconfig  .gitattributes  .gitignore  .rustfmt.toml
rust/http/: .dockerignore  Cargo.toml  Dockerfile  README.adoc  rust-toolchain.toml
rust/http/scripts/: clean.sh  docker_build.sh  docker_health.sh  docker_logs.sh  docker_remove.sh  docker_sh.sh  docker_start.sh  docker_stop.sh  format_check.sh  lint.sh
rust/http/src/: main.rs
rust/https/: .dockerignore  Cargo.toml  Dockerfile  README.adoc  rust-toolchain.toml
rust/https/scripts/: build.sh  build_release.sh  dependency_check_rust.sh  docker_build.sh  docker_health.sh  docker_logs.sh  docker_remove.sh  docker_sh.sh  docker_start.sh  docker_stop.sh  format.sh  test.sh
rust/https/src/: main.rs
scripts/: dependency_check.sh  format.sh  format_check.sh  git_cleanup.sh  lint.sh
shell/nc/: .dockerignore  Dockerfile  README.adoc
(+45 files in other folders)
