# SPDX-FileCopyrightText: © 2024 Sebastian Davids <sdavids@gmx.de>
# SPDX-License-Identifier: Apache-2.0

# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "sdavids-docker-healthcheck-rust-http"
version = "0.0.0"
edition = "2024"
# https://doc.rust-lang.org/stable/releases.html
rust-version = "1.88.0"
authors = ["Sebastian Davids <sdavids@gmx.de>"]
description = "A Docker health check for an HTTP URL passed in via ENV"
homepage = "https://github.com/sdavids/sdavids-docker-healthcheck"
repository = "https://github.com/sdavids/sdavids-docker-healthcheck"
readme = "README.adoc"
keywords = ["docker"]
categories = ["web-programming::http-client"]
license = "Apache-2.0"
publish = false

[[bin]]
name = "healthcheck"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "s"
strip = "symbols"

[dependencies]
# https://docs.rs/exitcode/latest/exitcode/
exitcode = "1.1.2"
# https://docs.rs/minreq/latest/minreq/
minreq = { version = "2.14.0" }
